<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >
    <TextView
        android:id="@+id/serviceTextView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:text="@string/service_description"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxHeight="200dp"
        android:scrollbars="vertical"
        android:background="@drawable/yellow_panel"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="2dp"
        android:paddingBottom="5dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceOne"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_one"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceTwo"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_two"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceThree"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_three"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceFour"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_four"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceFive"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_five"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceSix"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_six"
            android:background="@drawable/button_4"
            android:textSize="10dp"
            android:layout_marginBottom="10dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/serviceSeven"
            android:layout_gravity="center_horizontal"
            android:text="@string/service_seven"
            android:background="@drawable/button_4"
            android:textSize="10dp"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>