<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="25dp">
        <Button
            android:id="@+id/book_switch"
            android:height="30dp"
            android:background="@drawable/switch_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:layout_marginRight="5dp"
            />
        <Button
            android:id="@+id/tshirt_switch"
            android:height="30dp"
            android:background="@drawable/switch_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tshirt"/>
        <Button
            android:id="@+id/cart_num"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:background="@drawable/image_cart2"
            android:layout_marginLeft="30dp"
            android:textColor="#ff0000"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/prev_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/prev_btn"
            android:layout_gravity="center_vertical"
            android:onClick="onPlayClick"/>
        <ImageView
            android:id="@+id/book_tshirt"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:src="@drawable/b1"
            android:contentDescription="@string/image_description" />
        <Button
            android:id="@+id/next_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/next_btn"
            android:layout_gravity="center_vertical"
            android:onClick="onPlayClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/cart_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_2"
        android:text="@string/cart_btn"
        android:onClick="onCartClick"/>
    <Button
        android:id="@+id/buy_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_2"
        android:text="@string/buy_btn"
        android:onClick="onBuyClick"/>
    <Button
        android:id="@+id/online_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_2"
        android:text="@string/online_btn"
        android:onClick="onOnlineClick"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>