<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUCCESS DOESN'T SLEEP"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textColor="#ff0000"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/imageView"
            android:src="@drawable/image_coach2"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:text="@string/coach_description"
            android:id="@+id/coachTextView"
            android:background="@drawable/coast_panel"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:textColor="#0000ff"
            android:scrollbars="vertical"
            android:alpha="0.8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/book_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_2"
            android:text="@string/book_btn"
            android:layout_marginBottom="20dp"
            android:onClick="onButtonClick"
            />
        <Button
            android:id="@+id/tshirt_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_2"
            android:text="@string/tshirt_btn"
            android:layout_marginBottom="20dp"
            android:onClick="onButtonClick"/>
        <Button
            android:id="@+id/service_btn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/button_2"
            android:text="@string/service_btn"
            android:onClick="onButtonClick"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>